#
# Targets
#

pkglisp_LISP = tr-ime.el \
	tr-ime-openstatus.el \
	tr-ime-hook.el \
	tr-ime-workaround-prefix-key.el \
	tr-ime-module-helper.el tr-ime-module2-helper.el
EXTRA_DIST = tr-ime.el \
	tr-ime-openstatus.el \
	tr-ime-hook.el \
	tr-ime-workaround-prefix-key.el \
	tr-ime-module-helper.el tr-ime-module2-helper.el
