#
# Targets
#

pkglisp_LISP = tr-ime.el \
	tr-ime-openstatus.el \
	tr-ime-hook.el \
	tr-ime-workaround-prefix-key.el \
	tr-ime-workaround-inconsistent.el \
	tr-ime-subclassify.el \
	tr-ime-thread-message.el \
	tr-ime-recv-notify.el \
	tr-ime-font.el \
	tr-ime-isearch.el \
	tr-ime-workaround-isearch.el \
	tr-ime-prefix-key.el \
	tr-ime-sync.el \
	tr-ime-reconversion.el \
	tr-ime-module2-helper.el
EXTRA_DIST = tr-ime.el \
	tr-ime-openstatus.el \
	tr-ime-hook.el \
	tr-ime-workaround-prefix-key.el \
	tr-ime-workaround-inconsistent.el \
	tr-ime-subclassify.el \
	tr-ime-thread-message.el \
	tr-ime-recv-notify.el \
	tr-ime-font.el \
	tr-ime-isearch.el \
	tr-ime-workaround-isearch.el \
	tr-ime-prefix-key.el \
	tr-ime-sync.el \
	tr-ime-reconversion.el \
	tr-ime-module2-helper.el
